nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud 
  namespace: nextcloud
  labels:
    app: nextcloud 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud 
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
        node-role.kubernetes.io/master: "true"
      volumes:
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: mariadb-pvc
      - name: nextcloud-storage
        persistentVolumeClaim: 
          claimName: nextcloud-pvc
      containers:
      - name: mariadb 
        image: lscr.io/linuxserver/mariadb:latest
        ports:
          - containerPort: 3306
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql

      - image: nextcloud
        name: nextcloud 
        ports:
          - containerPort: 80
            protocol: TCP
        volumeMounts:
          - mountPath: /var/www/html
            name: nextcloud-storage
