nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app: mariadb
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud 
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
  selector:
    app: nextcloud
